--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.5",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.4.2",
