--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A dating app for Vikings - only Vikings",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "console": "node repl.js",
+    "c": "node repl.js",
+    "seed": "npm run sql db:migrate:undo:all && npm run sql db:migrate && npm run sql db:seed:all",
+    "seeds": "npm run sql db:migrate:undo:all && npm run sql db:migrate && npm run sql db:seed:all",
+    "sql": "node_modules/sequelize-cli/bin/sequelize"
   },
   "repository": {
     "type": "git",
