--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Avonyel/assignment_okodin#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
